Two small fixes, trying to hack around some width issues on mobile for the summary of nodes with 'pull all' (this is not a definite solution).

--- a/app/static/css/screen-dark.css
+++ b/app/static/css/screen-dark.css
@@ -541,7 +541,7 @@ details > summary {
     justify-content: space-between;
     /* it proved to be tough to use flex inside of summary... */
     /* so here's a hack :) */
-    width: 98%;
+    width: 97%;
 }
 
 .inline-flex > div {
